# OpenGL_research

./: .gitignore
gl_triangle/: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  main.cpp  shader.frag  shader.vert  shader2.frag  shader2.vert
lightingup/: CMakeLists.txt  Camera.cpp  Camera.h  Shader.cpp  Shader.h  combined_light.frag  combined_light.vert  direct_light.frag  gouraud.frag  gouraud.vert  lamp.vert  main.cpp  pointed_light.frag  pointed_light.vert  projected_light.frag  shader.frag  shader.vert
models/: CMakeLists.txt  Camera.cpp  Camera.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  combined_light.frag  lamp.frag  main.cpp
